ansible/bastion/files/k3s/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole-ingress
  namespace: guacamole
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: guacamole
          port: 80
